--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             
             <div class="profile-avatar-container">
                 <div class="profile-avatar-wrapper" onclick="document.getElementById('profileUploadInput').click()">
-                    <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" id="editProfileImg" alt="Profile" class="profile-img-lg">
+                    <img src="profile-default.jpeg" id="editProfileImg" alt="Profile" class="profile-img-lg">
                     <div class="avatar-overlay">
                         <i class="fa-solid fa-camera"></i>
                     </div>
