--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <img src="logo.png" alt="Logo" style="height: 40px;">
             </div>
             <div class="profile-area">
-                <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="User" class="avatar" id="dashAvatar" onclick="openProfilePage()" title="Edit Profil">
+                <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="User" class="avatar" id="dashAvatar" onclick="openProfilePage()" title="Edit Profil" onerror="this.src='https://cdn-icons-png.flaticon.com/512/847/847969.png'">
                 <button id="logoutBtn" class="btn-pill small logout-btn"><i class="fa-solid fa-right-from-bracket"></i></button>
             </div>
         </header>
@@ -143,7 +143,7 @@
             
             <div class="profile-avatar-container">
                 <div class="profile-avatar-wrapper" onclick="document.getElementById('profileUploadInput').click()">
-                    <img src="profile-default.jpeg" id="editProfileImg" alt="Profile" class="profile-img-lg">
+                    <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" id="editProfileImg" alt="Profile" class="profile-img-lg" onerror="this.src='https://cdn-icons-png.flaticon.com/512/847/847969.png'">
                     <div class="avatar-overlay">
                         <i class="fa-solid fa-camera"></i>
                     </div>
@@ -188,7 +188,7 @@
             <button class="back-icon-btn" onclick="closeStoragePage()"><i class="fa-solid fa-arrow-left"></i></button>
             <h2>Pengelola Penyimpanan</h2>
             <div style="flex:1"></div>
-            <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="User" class="avatar" id="storagePageAvatar">
+            <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="User" class="avatar" id="storagePageAvatar" onerror="this.src='https://cdn-icons-png.flaticon.com/512/847/847969.png'">
         </header>
 
         <div class="storage-page-content">
