--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <img src="logo.png" alt="Logo" style="height: 40px;">
             </div>
             <div class="profile-area">
-                <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="User" class="avatar" id="dashAvatar" onclick="openProfilePage()" title="Edit Profil">
+                <img src="profile-default.jpeg" alt="User" class="avatar" id="dashAvatar" onclick="openProfilePage()" title="Edit Profil">
                 <button id="logoutBtn" class="btn-pill small logout-btn"><i class="fa-solid fa-right-from-bracket"></i></button>
             </div>
         </header>
