--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             
             <div class="profile-avatar-container">
                 <div class="profile-avatar-wrapper" onclick="document.getElementById('profileUploadInput').click()">
-                    <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" id="editProfileImg" alt="Profile" class="profile-img-lg">
+                    <img src="profile-default.jpeg" id="editProfileImg" alt="Profile" class="profile-img-lg">
                     <div class="avatar-overlay">
                         <i class="fa-solid fa-camera"></i>
                     </div>
@@ -188,7 +188,7 @@
             <button class="back-icon-btn" onclick="closeStoragePage()"><i class="fa-solid fa-arrow-left"></i></button>
             <h2>Pengelola Penyimpanan</h2>
             <div style="flex:1"></div>
-            <img src="https://cdn-icons-png.flaticon.com/512/847/847969.png" alt="User" class="avatar" id="storagePageAvatar">
+            <img src="profile-default.jpeg" alt="User" class="avatar" id="storagePageAvatar">
         </header>
 
         <div class="storage-page-content">
