--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="auth-header">
                 <img src="logo.png" alt="Logo" class="auth-logo">
                 <h3>Reset Password</h3>
-                <p style="font-size: 0.85rem; color: #94a3b8; margin-top:5px;">Masukkan email akun Anda untuk membuat password baru.</p>
+                <p style="font-size: 0.85rem; color: #94a3b8; margin-top:5px; margin-bottom: 25px;">Masukkan email akun Anda untuk membuat password baru.</p>
             </div>
             <form id="resetForm">
                 <div class="pill-input">
@@ -316,12 +316,10 @@
 
     <div id="storageModal" class="modal-overlay hidden" onclick="if(event.target === this) closeModal('storageModal')">
         <div class="glass-card modal-box storage-detail-box-wide">
-            
             <div class="storage-modal-header">
                 <h3>Penyimpanan</h3>
                 <i class="fa-solid fa-xmark close-icon-simple" onclick="closeModal('storageModal')"></i>
             </div>
-            
             <div class="storage-flex-container">
                 <div class="storage-col-left">
                     <div class="storage-content-wrapper">
@@ -341,7 +339,6 @@
                         <button class="btn-rect secondary-dark" onclick="openStoragePage()">Kosongkan ruang penyimpanan</button>
                     </div>
                 </div>
-
                 <div class="storage-col-right">
                     <div class="storage-legend">
                         <div class="legend-row"><div class="legend-label"><span class="dot dot-images"></span> Gambar</div><span id="valImages" class="legend-val">0 MB</span></div>
